--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -276,7 +276,7 @@
 
           <div class="copywrites">
               <p>@ 2023 ACME grupė. Visos teisės saugomos</p>
-              <a href="#">Privatumo politika</a>
+              <a href="privatumo-politika.html">Privatumo politika</a>
           </div>
       </footer>
     </main>
