--- a/src/pages/pagrindines-veiklos.html
+++ b/src/pages/pagrindines-veiklos.html
@@ -188,11 +188,11 @@
             </div>
    
             <hr>
-
+            
             <div class="copywrites">
-                <p>@ 2023 ACME grupė. Visos teisės saugomos</p>
-                <a href="#">Privatumo politika</a>
-            </div>
+              <p>@ 2023 ACME grupė. Visos teisės saugomos</p>
+              <a href="privatumo-politika.html">Privatumo politika</a>
+          </div>
         </footer>
 
     </main>
