--- a/src/pages/tvarumas.html
+++ b/src/pages/tvarumas.html
@@ -269,8 +269,8 @@
     
           <div class="copywrites">
             <p>@ 2023 ACME grupė. Visos teisės saugomos</p>
-            <a href="#">Privatumo politika</a>
-          </div>
+            <a href="privatumo-politika.html">Privatumo politika</a>
+        </div>
         </div>
         
       </footer>
