--- a/src/pages/apie-mus.html
+++ b/src/pages/apie-mus.html
@@ -298,9 +298,9 @@
             <hr>
 
             <div class="copywrites">
-                <p>@ 2023 ACME grupė. Visos teisės saugomos</p>
-                <a href="#">Privatumo politika</a>
-            </div>
+              <p>@ 2023 ACME grupė. Visos teisės saugomos</p>
+              <a href="privatumo-politika.html">Privatumo politika</a>
+          </div>
         </footer>
 
     </main>
