--- a/src/pages/naujienos-vidus.html
+++ b/src/pages/naujienos-vidus.html
@@ -150,7 +150,7 @@
                 <path d="M587.208 948.111L616.925 467.922L642.947 47.5406C859.445 31.9245 1075.94 16.3085 1292.44 0.692398C1292.44 0.651678 1292.44 0.600778 1292.44 0.560059C929.191 26.7633 565.931 52.9665 202.682 79.1697C96.876 86.8047 13.0194 171.512 6.47334 277.384L0.609375 372.19C91.1545 365.654 181.7 359.129 272.245 352.593C367.28 345.742 446.3 424.749 439.449 519.789C420.065 788.438 400.692 1057.09 381.308 1325.75C654.379 1308.84 927.45 1291.94 1200.51 1275.03C1200.51 1274.99 1200.51 1274.94 1200.51 1274.9C988.523 1288.02 776.535 1301.14 564.547 1314.27L587.208 948.132V948.111Z" fill="#00917D"/>
                 </svg>
             </div>
-            <div class="left">
+            <div class="left gallery-item">
               <video src="/landing/bg-video.mp4"></video>
             </div>
             <div class="right">
@@ -170,8 +170,10 @@
             <!-- Gallery swiper -->
             <div class="swiper gallery-swiper">
               <div class="swiper-exit">
-                <svg xmlns="http://www.w3.org/2000/svg" height="16" width="16" viewBox="0 0 512 512">
-                  <path opacity="1" fill="#E6F5E4" d="M256 48a208 208 0 1 1 0 416 208 208 0 1 1 0-416zm0 464A256 256 0 1 0 256 0a256 256 0 1 0 0 512zM175 175c-9.4 9.4-9.4 24.6 0 33.9l47 47-47 47c-9.4 9.4-9.4 24.6 0 33.9s24.6 9.4 33.9 0l47-47 47 47c9.4 9.4 24.6 9.4 33.9 0s9.4-24.6 0-33.9l-47-47 47-47c9.4-9.4 9.4-24.6 0-33.9s-24.6-9.4-33.9 0l-47 47-47-47c-9.4-9.4-24.6-9.4-33.9 0z"/>
+                <svg xmlns="http://www.w3.org/2000/svg" width="52" height="52" viewBox="0 0 52 52" fill="none">
+                  <circle cx="25.5811" cy="25.5811" r="25.5811" fill="#E6F5E4"/>
+                  <path d="M13.2031 14.0283L37.1338 37.959" stroke="#004A4E" stroke-width="2" stroke-linecap="round"/>
+                  <path d="M13.2031 37.1338L37.1338 13.2031" stroke="#004A4E" stroke-width="2" stroke-linecap="round"/>
                 </svg>
               </div>
               <div class="swiper-wrapper">
@@ -239,7 +241,7 @@
     </main>
 
     <script type="module" src="/src/scripts/navigation.js"></script>
-    <script type="module" src="/src/scripts/gallery.js"></script>
+    <script type="module" src="/src/scripts/gallery-naujienos.js"></script>
       <!-- Loading animation -->
       <script type="module">
         import gsap from "gsap";
