--- a/src/pages/naujienos-vidus.html
+++ b/src/pages/naujienos-vidus.html
@@ -244,7 +244,7 @@
     <script type="module" src="/src/scripts/navigation.js"></script>
     <script type="module" src="/src/scripts/gallery-naujienos.js"></script>
       <!-- Loading animation -->
-      <!-- <script type="module">
+      <script type="module">
         import gsap from "gsap";
         import ScrollTrigger from "gsap/ScrollTrigger";
         gsap.registerPlugin(ScrollTrigger);
@@ -290,6 +290,6 @@
         });
       });
       })
-      </script> -->
+      </script>
     </body>
 </html>
