socialine ir tvarumas done

--- a/src/pages/tvarumas.html
+++ b/src/pages/tvarumas.html
@@ -213,6 +213,22 @@
         </div>
     </section>
 
+    <section class="ataskaitos">
+      <h3>Ataskaitos</h3>
+      <div class="content">
+        <h4>Geri darbai 2020</h3>
+          <a class="icon" href="/tvarumas/bend-arrow.svg" download>
+            <img src="/tvarumas/bend-arrow.svg" alt="bend-arrow">
+          </a>
+      </div>
+      <div class="content">
+        <h4>Geri darbai 2020</h3>
+          <a class="icon" href="/tvarumas/bend-arrow.svg" download>
+            <img src="/tvarumas/bend-arrow.svg" alt="bend-arrow">
+          </a>
+      </div>
+    </section>
+
     <footer>
         <div class="footer-shape-1"></div>
         <div class="footer-shape-2"></div>
