soc shape shadow gone

--- a/src/pages/socialine-atsakomybe.html
+++ b/src/pages/socialine-atsakomybe.html
@@ -455,7 +455,7 @@
     <script type="module" src="/src/scripts/navigation.js"></script>
     <script type="module" src="/src/scripts/soc-swiper.js"></script>
     <script type="module" src="/src/scripts/gallery-soc.js"></script>
-    <!-- <script type="module">
+    <script type="module">
       import gsap from "gsap";
       import ScrollTrigger from "gsap/ScrollTrigger";
       gsap.registerPlugin(ScrollTrigger);
@@ -490,6 +490,6 @@
       });
             
       });
-    </script> -->
+    </script>
   </body>
 </html>
