--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -135,7 +135,7 @@
             <h2>Veiklos sritys</h2>
           </div>
     
-          <div class="right">
+          <a href="verslo-inovaciju-labaratorija.html" class="right">
             <img class="right-img" src="/images/activities-3.jpg" alt="">
             <div class="content">
               <h2>Inovacijų labaratorija</h2>
@@ -146,7 +146,7 @@
                 </g>
                 </svg>
             </div>
-          </div>
+          </a>
         </section>
 
 
