inovaciju text colors and brands

--- a/src/pages/verslo-inovaciju-labaratorija.html
+++ b/src/pages/verslo-inovaciju-labaratorija.html
@@ -122,9 +122,9 @@
                 <p>Bendrovė platina bei kuria lietuvišką kiną: repertuare tokie filmai, kaip „Tarp pilkų debesų“, „Tadas Blinda: pradžia“, „Valentinas vienas“, „Emilija iš Laisvės alėjos“, „Ir visi jų vyrai“, „Importinis jaunikis“ ir kt.</p>
 
                 <div class="brands">
-                    <img src="/pagrindines-veiklos/brand-1.svg" alt="brand-1">
-                    <img src="/pagrindines-veiklos/brand-2.svg" alt="brand-2">
-                    <img src="/pagrindines-veiklos/brand-3.svg" alt="brand-3">
+                    <img src="/tvarumas/brand-1.svg" alt="brand-1">
+                    <img src="/tvarumas/brand-2.svg" alt="brand-2">
+                    <img src="/tvarumas/brand-3.svg" alt="brand-3">
                 </div>
 
                 <a href="#" class="button">Daugiau informacijos</a>
@@ -144,9 +144,9 @@
               <p>„AVAD Baltic“ komanda aktyviai prisideda prie „Apple“ technologijų adaptavimo ir naudojimo, padėdama kelti verslo ir švietimo sektoriaus specialistų kvalifikaciją, mokydama ir konsultuodama specialistus, kaip naudotis moderniomis „Apple“ technologijomis.</p>
 
               <div class="brands">
-                  <img src="/pagrindines-veiklos/brand-1.svg" alt="brand-1">
-                  <img src="/pagrindines-veiklos/brand-2.svg" alt="brand-2">
-                  <img src="/pagrindines-veiklos/brand-3.svg" alt="brand-3">
+                <img src="/tvarumas/brand-1.svg" alt="brand-1">
+                <img src="/tvarumas/brand-2.svg" alt="brand-2">
+                <img src="/tvarumas/brand-3.svg" alt="brand-3">
               </div>
 
               <a href="#" class="button">Daugiau informacijos</a>
