karjera added to nav

--- a/src/pages/darbo-skelbimai.html
+++ b/src/pages/darbo-skelbimai.html
@@ -24,13 +24,12 @@
 
     <!-- Tab icon -->
     <link rel="icon" href="/path-to-your-favicon.ico" type="image/x-icon">
-    <title>Acme group: karjera</title>
+    <title>Acme group: darbo skelbimai</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500&display=swap">
     <link rel="stylesheet" href="/src/styles/global.scss">
     <link rel="stylesheet" href="/src/styles/header.scss">
     <link rel="stylesheet" href="/src/styles/tabs.scss">
-    <link rel="stylesheet" href="/src/styles/karjera.scss">
-    <link rel="stylesheet" href="/src/styles/gallery.scss">
+    <link rel="stylesheet" href="/src/styles/darbo-skelbimai.scss">
     <link rel="stylesheet" href="/src/styles/footer.scss">
   </head>
   <body>
@@ -461,9 +460,7 @@
     </main>
 
     <script type="module" src="/src/scripts/navigation.js"></script>
-    <script type="module" src="/src/scripts/karjera-tabs.js"></script>
-    <script type="module" src="/src/scripts/gallery-karjera.js"></script>
-    <script type="module">
+    <!-- <script type="module">
       import gsap from "gsap";
       import ScrollTrigger from "gsap/ScrollTrigger";
       gsap.registerPlugin(ScrollTrigger);
@@ -502,6 +499,6 @@
 
 
 
-    </script>
+    </script> -->
     </body>
 </html>
