--- a/src/pages/privatumo-politika.html
+++ b/src/pages/privatumo-politika.html
@@ -77,7 +77,7 @@
           <span>Veiklos kryptys</span>
         </a>
   
-        <a href="#" class="link">
+        <a href="karjera.html" class="link">
           <svg width="41" height="40" viewBox="0 0 41 40"  xmlns="http://www.w3.org/2000/svg">
             <path class="fill" d="M38.1342 37.997C39.7894 37.9229 41.0711 36.521 40.997 34.8658L39.7893 7.89283C39.7151 6.23764 38.3133 4.95591 36.6581 5.03003C35.0029 5.10414 33.7211 6.50602 33.7953 8.16122L34.8688 32.1372L10.8928 33.2107C9.23763 33.2849 7.95591 34.6867 8.03003 36.3419C8.10414 37.9971 9.50602 39.2789 11.1612 39.2047L38.1342 37.997ZM0.975692 5.21409L35.9757 37.2141L40.0243 32.7859L5.02431 0.785914L0.975692 5.21409Z"/>
           </svg>
