darbo skelbimai done

--- a/src/pages/darbo-skelbimai.html
+++ b/src/pages/darbo-skelbimai.html
@@ -271,6 +271,7 @@
     </main>
 
     <script type="module" src="/src/scripts/navigation.js"></script>
+    <script type="module" src="/src/scripts/darbo-skelbimai.js"></script>
     <script type="module">
       import gsap from "gsap";
       import ScrollTrigger from "gsap/ScrollTrigger";
