--- a/src/pages/mentoryste.html
+++ b/src/pages/mentoryste.html
@@ -95,116 +95,42 @@
             <div class="shape-1"></div>
 
             <div class="content">
-              <h1>Darbo skelbimai</h1>
+              <h1>Mentoryste</h1>
             </div>
 
+            <div class="content-2">
+              <h2>Morem ipsum</h2>
+              <p>Korem ipsum dolor sit amet, consectetur adipiscing elit. Nunc vulputate libero et velit interdum, ac aliquet odio mattis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. </p>
+              <p>Curabitur tempus urna at turpis condimentum lobortis.</p>
+              <a class="button" href="darbo-skelbimai.html">Susisiekite</a>
+            </div>
+
+            <div class="content-info">
+              <div class="icons">
+                <div class="icon">
+                    <img src="/karjera/icon-1.svg" alt="">
+                    <p>Informacijos punktas</p>
+                </div>
+                <div class="icon">
+                    <img src="/karjera/icon-2.svg" alt="">
+                    <p>Informacijos punktas</p>
+                </div>
+                <div class="icon">
+                    <img src="/karjera/icon-3.svg" alt="">
+                    <p>Informacijos punktas</p>
+                </div>
+                <div class="icon">
+                    <img src="/karjera/icon-4.svg" alt="">
+                    <p>Informacijos punktas</p>
+                </div>
+            </div>
+             </div>
         </section>
 
+        <p id="text-container" class="animated-opacity">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Rem qui aliquid voluptate quod at fuga officia eveniet totam numquam non. Aliquid velit voluptas dicta qui minima perferendis culpa exercitationem ipsam porro tempora ex unde officia necessitatibus.
+        </p>
 
-      <section class="section-jobs">
-        <div class="jobs-heading">
-          <h3>Darbo skelbimai</h3>
-          <p>
-            <span>Miestas</span>
-            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="12" viewBox="0 0 15 12" fill="none">
-              <path d="M7.5 12L0.138784 5.20717e-07L14.8612 1.80779e-06L7.5 12Z" fill="#2E133A"/>
-              </svg>
-          </p>
-          <p>
-            <span>Įmonė</span>
-            <svg xmlns="http://www.w3.org/2000/svg" width="15" height="12" viewBox="0 0 15 12" fill="none">
-              <path d="M7.5 12L0.138784 5.20717e-07L14.8612 1.80779e-06L7.5 12Z" fill="#2E133A"/>
-              </svg>
-          </p>
-        </div>
-
-        <div class="jobs-main">
-          <div class="job">
-              <h3 class="job-title">HA Business development manager</h3>
-              <p class="job-city">Vilnius</p>
-              <img class="job-logo" src="/karjera/logo-dark.svg" alt="">
-              <a href="#">
-                <img class="job-link" src="/karjera/arrow.svg" alt="">
-              </a>
-              <hr>
-          </div>
-          <div class="job">
-              <h3 class="job-title">HA Business development manager</h3>
-              <p class="job-city">Vilnius</p>
-              <img class="job-logo" src="/karjera/logo-dark.svg" alt="">
-              <a href="#">
-                <img class="job-link" src="/karjera/arrow.svg" alt="">
-              </a>
-              <hr>
-          </div>
-          <div class="job">
-              <h3 class="job-title">HA Business development manager</h3>
-              <p class="job-city">Vilnius</p>
-              <img class="job-logo" src="/karjera/logo-dark.svg" alt="">
-              <a href="#">
-                <img class="job-link" src="/karjera/arrow.svg" alt="">
-              </a>
-              <hr>
-          </div>
-          <div class="job">
-              <h3 class="job-title">HA Business development manager</h3>
-              <p class="job-city">Vilnius</p>
-              <img class="job-logo" src="/karjera/logo-dark.svg" alt="">
-              <a href="#">
-                <img class="job-link" src="/karjera/arrow.svg" alt="">
-              </a>
-              <hr>
-          </div>
-          <div class="job">
-              <h3 class="job-title">HA Business development manager</h3>
-              <p class="job-city">Vilnius</p>
-              <img class="job-logo" src="/karjera/logo-dark.svg" alt="">
-              <a href="#">
-                <img class="job-link" src="/karjera/arrow.svg" alt="">
-              </a>
-              <hr>
-          </div>
-          <div class="job">
-              <h3 class="job-title">HA Business development manager</h3>
-              <p class="job-city">Vilnius</p>
-              <img class="job-logo" src="/karjera/logo-dark.svg" alt="">
-              <a href="#">
-                <img class="job-link" src="/karjera/arrow.svg" alt="">
-              </a>
-              <hr>
-          </div>
-          <div class="job">
-              <h3 class="job-title">HA Business development manager</h3>
-              <p class="job-city">Vilnius</p>
-              <img class="job-logo" src="/karjera/logo-dark.svg" alt="">
-              <a href="#">
-                <img class="job-link" src="/karjera/arrow.svg" alt="">
-              </a>
-              <hr>
-          </div>
-          <div class="job">
-              <h3 class="job-title">HA Business development manager</h3>
-              <p class="job-city">Vilnius</p>
-              <img class="job-logo" src="/karjera/logo-dark.svg" alt="">
-              <a href="#">
-                <img class="job-link" src="/karjera/arrow.svg" alt="">
-              </a>
-              <hr>
-          </div>
-          <div class="job">
-              <a class="more" href="#">Load more</a>
-          </div>
-        </div>
-      </section>
-
-    
-
-      <section class="other-jobs">
-        <div class="content">
-          <h2>Jei šiuo metu nerandate Jums tinkamos darbo pozicijos, palikite savo kontaktinius duomenis.</h2>
-          <p>Atsiųstas CV pateks į vienos iš „ACME Grupės“ bendrovių „ACME Valda“ duomenų bazę. Turėdami Jums tinkantį darbo pasiūlymą, nedelsiant su Jumis susisieksime!</p>
-        </div>
-      </section>
         
       <footer>
         <svg  class="footer-forma" xmlns="http://www.w3.org/2000/svg" width="1625" height="501" viewBox="0 0 1625 501" fill="none">
@@ -271,7 +197,7 @@
     </main>
 
     <script type="module" src="/src/scripts/navigation.js"></script>
-    <script type="module" src="/src/scripts/darbo-skelbimai.js"></script>
+    <script type="module" src="/src/scripts/animated-words.js"></script>
     <script type="module">
       import gsap from "gsap";
       import ScrollTrigger from "gsap/ScrollTrigger";
@@ -309,6 +235,22 @@
         });
       });
 
+
+      gsap.from('.section-1 .content-2', {
+          x: -500,
+          opacity: 0,
+          duration: 1,
+          ease: "power3.inOut",
+          clipPath: "inset(0 0 0 100%)",
+          stagger: 0.5
+        }, "1.5");
+
+      gsap.from('.section-1 .content-info', {
+          opacity: 0,
+          duration: 1,
+          ease: "power3.inOut",
+          stagger: 0.5
+        }, "2.5");
 
 
     </script>
