--- a/src/pages/verslo-inovaciju-labaratorija.html
+++ b/src/pages/verslo-inovaciju-labaratorija.html
@@ -109,7 +109,7 @@
 
         <section class="section-2">
           <div class="foto-1">
-            <img src="/pagrindines-veiklos/foto-1.png" alt="">
+            <img src="/images/activities-2.jpg" alt="">
             <div class="shape-2"></div>
           </div>
  
